# mq-bridge

./: .gitignore  Cargo.toml  README.md  ROADMAP.yml  build.rs  mq-bridge.schema.json
.cursor/: rules
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  test-matrix.yml
benches/: performance_bench.rs
dev/bench/: data.js
src/: canonical_message.rs  command_handler.rs  errors.rs  event_handler.rs  event_store.rs  extensions.rs  lib.rs  models.rs  next_id.rs  outcomes.rs  publisher.rs  route.rs  test_utils.rs  traits.rs  type_handler.rs
src/endpoints/: amqp.rs  aws.rs  fanout.rs  file.rs  http.rs  ibm_mq.rs  kafka.rs  memory.rs  mod.rs  mongodb.rs  mqtt.rs  nats.rs  null.rs  response.rs  static_endpoint.rs  switch.rs  zeromq.rs
src/middleware/: compute.rs  deduplication.rs  delay.rs  dlq.rs  metrics.rs  mod.rs  random_panic.rs  retry.rs  weak_join.rs
tests/: README.md  armature_integration.rs  integration_test.rs  memory_test.rs  performance_pipeline.rs  request_reply_test.rs  unit_tests.md
tests/integration/: amqp.rs  aws.rs  common.rs  ibm_mq.rs  kafka.rs  memory.rs  mod.rs  mongodb.rs  mqtt.rs  nats.rs  route.rs  zeromq.rs
tests/integration/docker-compose/: aws.yml  mongodb.yml  mosquitto_persistence.conf  mqtt.yml  nats.yml
