[package]
name = "mq-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]

config = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }
async-trait = "0.1.68"
serde_json = "1.0"
thiserror = "2.0.17"
futures = "0.3.31"
tracing = "0.1"
rand = "0.9.2"
bytes = { version = "1.11.0", features = ["serde"] }

# Common TLS dependencies
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

# Metrics
metrics = { version = "0.24", optional = true }

# Storage for Deduplication
sled = { version = "0.34", optional = true }

# --- Optional Endpoint Dependencies ---

# Kafka
rdkafka = { version = "0.38", features = ["tokio"], optional = true }
async-stream = { version = "0.3", optional = true } # Used by Kafka consumer

# AMQP (RabbitMQ)
lapin = { version = "3.7", features = ["rustls"], optional = true }

# MongoDB
mongodb = { version = "3.4", optional = true }
uuid = { version = "1.19", features = ["v4", "v7"]}

# NATS
async-nats = { version = "0.45", optional = true }

# MQTT
rumqttc = { version = "0.25.1", optional = true }

# HTTP
axum = { version = "0.8.7", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }


url = { version = "2.5", optional = true }

# Memory (for testing) # TODO - use tokio
async-channel = { version = "2.5.0" }
once_cell = { version = "1.21.3"  }

[features]
default = ["full"]
full = ["mongodb", "kafka", "amqp", "nats", "mqtt", "http",  "metrics", "dedup"]

# Functionality features
dedup = ["sled"]
metrics = ["dep:metrics"]


# Endpoint features
kafka = ["rdkafka", "async-stream"]
amqp = ["lapin", "rustls", "rustls-pemfile", "url"]
nats = ["async-nats", "rustls", "rustls-pemfile"]
mongodb = ["dep:mongodb"]
mqtt = ["rumqttc", "rustls", "tokio-rustls", "rustls-pemfile", "url"]
http = ["axum", "reqwest", "axum-server", "rustls", "tokio-rustls", "rustls-pemfile"]

[dev-dependencies]
serde_yaml_ng = "0.10.0"
tempfile = "3.10"
tracing-appender = "0.2"
chrono = "0.4"
metrics-util = "0.20.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
criterion = { version = "0.8.1", features = ["async", "async_tokio"] }

[[bench]]
name = "performance_bench"
harness = false
