[package]
name = "mq-bridge"
version = "0.1.5"
edition = "2021"
description = "An asynchronous message bridging library connecting Kafka, MQTT, AMQP, NATS, MongoDB, HTTP, and more."
repository = "https://github.com/marcomq/mq-bridge"
license = "MIT"
readme = "README.md"
keywords = ["messaging", "kafka", "nats", "amqp", "cqrs"]
categories = ["asynchronous", "network-programming"]

[dependencies]

config = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }
async-trait = "0.1.68"
serde_json = "1.0.148"
thiserror = "2.0.17"
futures = "0.3.31"
tracing = "0.1.44"
rand = "0.9.2"
bytes = { version = "1.11.0", features = ["serde"] }

# Common TLS dependencies
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

# Metrics
metrics = { version = "0.24", optional = true }

# Storage for Deduplication
sled = { version = "0.34", optional = true }

# --- Optional Endpoint Dependencies ---

# Kafka
rdkafka = { version = "0.38", features = ["tokio"], optional = true }
async-stream = { version = "0.3", optional = true } # Used by Kafka consumer

# AMQP (RabbitMQ)
lapin = { version = "3.7", features = ["rustls"], optional = true }

# MongoDB
mongodb = { version = "3.4", optional = true, features = ["cert-key-password"] }
uuid = { version = "1.19", features = ["v4", "v7"]}

# NATS
async-nats = { version = "0.45", optional = true }

# MQTT
rumqttc = { version = "0.25.1", optional = true }

# IBM MQ
mqi = { version = "0.3.0", optional = true }

# HTTP
axum = { version = "0.8.8", optional = true }
reqwest = { version = "0.13.1", features = ["json"], optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }

# AWS
aws-config = { version = "1.8.12", optional = true, features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.91", optional = true }
aws-sdk-sns = { version = "1.92", optional = true }

url = { version = "2.5", optional = true }

# Memory (for testing)
async-channel = { version = "2.5.0" }
once_cell = { version = "1.21.3" }
schemars = { version = "1.2", optional = true }

[features]
default = ["ibm-mq"]
full = ["mongodb", "kafka", "amqp", "nats", "mqtt", "http", "metrics", "dedup", "aws"]

# Functionality features
dedup = ["sled"]
metrics = ["dep:metrics"]


# Endpoint features
kafka = ["rdkafka", "async-stream"]
amqp = ["lapin", "rustls", "rustls-pemfile", "url"]
nats = ["async-nats", "rustls", "rustls-pemfile"]
mongodb = ["dep:mongodb"]
mqtt = ["rumqttc", "rustls", "tokio-rustls", "rustls-pemfile", "url"]
http = ["http-client", "http-server"]
http-client = ["reqwest", "rustls", "tokio-rustls", "rustls-pemfile"]
http-server = ["axum", "axum-server", "rustls", "tokio-rustls", "rustls-pemfile"]
schema = ["dep:schemars"]
aws = ["aws-config", "aws-sdk-sqs", "aws-sdk-sns"]
ibm-mq = ["mqi"]

[dev-dependencies]
serde_yaml_ng = "0.10.0"
tempfile = "3.10"
tracing-appender = "0.2"
chrono = "0.4"
metrics-util = "0.20.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
criterion = { version = "0.8.1", features = ["async", "async_tokio"] }

[[bench]]
name = "performance_bench"
harness = false

[target.'cfg(windows)'.dependencies.rdkafka]
version = "0.38"
features = ["cmake-build", "tokio"]
optional = true
