[package]
name = "mq-bridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"  # 2021 edition was released in 1.56
description = "An asynchronous message bridging library connecting Kafka, MQTT, AMQP, NATS, MongoDB, HTTP, and more."
repository = "https://github.com/marcomq/mq-bridge"
license = "MIT"
readme = "README.md"
keywords = ["messaging", "kafka", "nats", "amqp", "cqrs"]
categories = ["asynchronous", "network-programming"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }
async-trait = "0.1"
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
tracing = "0.1"
bytes = { version = "1", features = ["serde"] }
async-channel = { version = "2.5" }
once_cell = { version = "1.21" }
uuid = { version = "1.19", features = ["v4", "v7"]}

# Common TLS dependencies
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

# Metrics
metrics = { version = "0.24", optional = true }

# Storage for Deduplication
sled = { version = "0.34", optional = true }

# Panic Middleware
rand = { version = "0.9",  optional = true }

# Test Utils
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }

# --- Optional Endpoint Dependencies ---

# Kafka
rdkafka = { version = "0.38", features = ["tokio"], optional = true }

# AMQP (RabbitMQ)
lapin = { version = "3.7", features = ["rustls"], optional = true }

# MongoDB
mongodb = { version = "3.4", optional = true, features = ["cert-key-password"] }

# NATS
async-nats = { version = "0.45", optional = true }

# MQTT
rumqttc = { version = "0.25", optional = true }

# IBM MQ
mqi = { version = "0.3", optional = true }

# HTTP
actix-web = { version = "4.12", features = ["rustls-0_23"], optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

# AWS
aws-config = { version = "1.8", optional = true, features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.92", optional = true }
aws-sdk-sns = { version = "1.93", optional = true }

# ZeroMQ
zeromq = { version = "0.4", optional = true }

url = { version = "2.5", optional = true }

# Generate JSON schema
schemars = { version = "1.2", optional = true }

# test-utils
serde_yaml_ng = { version = "0.10", optional = true }

[features]
default = []
middleware = ["metrics", "dedup", "panic"]
full = ["middleware", "mongodb", "kafka", "amqp", "nats", "mqtt", "http", "aws", "zeromq"]

# Functionality features
dedup = ["sled", "dep:rand"]
metrics = ["dep:metrics"]
panic = ["dep:rand"]
test-utils = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:serde_yaml_ng"]

# Generate Schema file
schema = ["dep:schemars"]

# Endpoint features
kafka = ["rdkafka"]
amqp = ["lapin", "rustls", "rustls-pemfile", "url"]
nats = ["async-nats", "rustls", "rustls-pemfile"]
mongodb = ["dep:mongodb"]
mqtt = ["rumqttc", "rustls", "tokio-rustls", "rustls-pemfile", "url"]
http = ["http-client", "http-server"]
http-client = ["reqwest", "rustls", "tokio-rustls", "rustls-pemfile"]
http-server = ["actix-web", "rustls", "tokio-rustls", "rustls-pemfile", "url"]
aws = ["aws-config", "aws-sdk-sqs", "aws-sdk-sns"]
ibm-mq = ["mqi"]
zeromq = ["dep:zeromq"]

[dev-dependencies]
config = { version = "0.15" }
serde_yaml_ng = "0.10"
tempfile = "3.10"
chrono = "0.4"
metrics-util = "0.20"
criterion = { version = "0.8", features = ["async", "async_tokio"] }
rand = { version = "0.9" }
mq-bridge = { path = ".", features = ["test-utils"] }

[[bench]]
name = "performance_bench"
harness = false
required-features = ["test-utils"]

[[test]]
name = "integration_test"
required-features = ["test-utils"]

[[test]]
name = "memory_test"
required-features = ["test-utils"]

[[test]]
name = "request_reply_test"
required-features = ["test-utils"]

[[test]]
name = "performance_pipeline"
required-features = ["test-utils"]

[target.'cfg(windows)'.dependencies.rdkafka]
version = "0.38"
features = ["cmake-build", "tokio"]
optional = true
